<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.NewDoFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:title="@string/new_data"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/new_data"
        android:background="@drawable/vino_li_k3fi_m_3pka_unsplash"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/common_spacing">
    <EditText
        android:id="@+id/title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:hint="@string/add_title"
        android:inputType="text"
        android:textSize="@dimen/data_text_size"
        android:padding="@dimen/common_spacing"
        android:importantForAutofill="no"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        android:hint="@string/add_desc"
        android:textSize="@dimen/data_text_size"
        android:inputType="text"
        android:importantForAutofill="no"
        android:minLines="3"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/comps"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        android:hint="@string/add_comps"
        android:textSize="@dimen/data_text_size"
        android:inputType="text"
        android:minLines="3"
        android:importantForAutofill="no"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <EditText
        android:id="@+id/steps"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:padding="@dimen/common_spacing"
        android:hint="@string/add_steps"
        android:textSize="@dimen/data_text_size"
        android:inputType="text"
        android:minLines="3"
        android:importantForAutofill="no"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comps" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:layout_marginTop="@dimen/margin_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/steps"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>